--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -15,6 +15,9 @@
 	ignored = "!cd \"$(git rev-parse --show-cdup)\" && git clean -n -d | cut -c 14- | sed -e \"s/\\/$//\""
         ignoreall = "!cd \"$(git rev-parse --show-cdup)\" && git clean -n -d | cut -c 14- | sed -e \"s/\\/$//\" >> .git/info/exclude"
 	which = !cat $(git rev-parse --git-dir)/description
+	confused = log --graph --decorate --pretty=format:\"%Cgreen%d %Cred%ar %Creset%s\" --branches
+	reroll = !git rebase -i $(git merge-base HEAD $(git upstream))
+	upstream = !git rev-parse @{upstream} 2>/dev/null | git rev-parse origin/trunk 2>/dev/null | git rev-parse trunk 2>/dev/null
 ;        ignoreall = "ignored >> .git/info/exclude"
 [push]
 	default = matching
