--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -16,8 +16,11 @@
         ignoreall = "!cd \"$(git rev-parse --show-cdup)\" && git clean -n -d | cut -c 14- | sed -e \"s/\\/$//\" >> .git/info/exclude"
 	which = !cat $(git rev-parse --git-dir)/description
 	confused = log --graph --decorate --pretty=format:\"%Cgreen%d %Cred%ar %Creset%s\" --branches
-	reroll = !git rebase -i $(git merge-base HEAD $(git upstream))
 	upstream = !git rev-parse @{upstream} 2>/dev/null | git rev-parse origin/trunk 2>/dev/null | git rev-parse trunk 2>/dev/null
+	ancestor = !git merge-base HEAD $(git upstream)
+	reroll = !git rebase -i $(git ancestor)
+	compact-log = !git log --pretty=format:\"%B\" $(git ancestor)..HEAD
+	squash = "!export __OLD_LOG=$(git compact-log); git reset --soft $(git ancestor) && git commit -m \"$__OLD_LOG\"; export -n __OLG_LOG"
 ;        ignoreall = "ignored >> .git/info/exclude"
 [push]
 	default = matching
