--- a/configs/.hgrc
+++ b/configs/.hgrc
@@ -1,5 +1,15 @@
 [extensions]
 color =
+graphlog =
+rebase =
+# Superseeded by crecord
+#record =
+# https://bitbucket.org/edgimar/crecord
+crecord = ~/src/crecord/crecord
+# https://bitbucket.org/durin42/hg-remotebranches
+hg-remotebranches = ~/src/hg-remotebranches/hg_remotebranches.py
+inotify =
+mercurial_keyring =
 mq =
 pager =
 
@@ -17,5 +27,4 @@ vimdiff.executable = vim
 vimdiff.args = -d $base $local $output $other -c "wincmd J"
 
 [ui]
-verbose = True
 merge = vimdiff
