--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -36,11 +36,13 @@
 ; Blames against svn upstream. It's annoying that --date=short doesn't work
 ; here.
         sb = svn blame --git-format
-; Blames against the 'upstream' branch
-        blameup = "!foo() { git diff --name-only $(git ancestor) | while read i; do git blame --date=short -C $i | cut -d '(' -f 2 | cut -d ' ' -f 1; done | sort -f | uniq -ic | sort -nr; }; foo"
 ; Blames against a branch given as an argument
         blamebranch = "!foo() { git diff --name-only \"$@\" | while read i; do git blame --date=short -C $i | cut -d '(' -f 2 | cut -d ' ' -f 1; done | sort -f | uniq -ic | sort -nr; }; foo"
-; Blames a for a few files. The length of arguments is relatively limited
+; Blames against the 'upstream' branch
+        blameup = !git blamebranch $(git ancestor)
+; Blames a for a few files. The length of arguments is relatively limited, it'll
+; fail after ~100 files or so, depending on the actual string (total file names)
+; length.
         blamefiles = "!foo() { for i in \"$@\"; do git blame --date=short -C $i | cut -d '(' -f 2 | cut -d ' ' -f 1; done | sort -f | uniq -ic | sort -nr; }; foo"
 [push]
 	default = matching
