--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "git-prompt"]
 	path = git-prompt
 	url = git://github.com/lvv/git-prompt.git
+[submodule "git_utils"]
+	path = git_utils
+	url = git://github.com/maruel/git_utils.git
