--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -5,7 +5,7 @@
 	excludesfile = "~/.gitexcludes"
 [alias]
 ; Common shortcuts.
-	st = status
+	st = status --ignore-submodule=all
 	ci = commit
 	br = branch
         graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' \"$@\" | sed 's/[0-9a-f][0-9a-f]*/\"&\"/g' ; echo '}'; }; f"
