Update update_config.py to quit early in case of source file modification.
In that case, it prints out the diff so it can be applied on the source.
It also quits early if the diff tool returns non-zero.

Update some configuration diffs I had on my system

--- a/configs/.git-prompt.conf
+++ b/configs/.git-prompt.conf
@@ -16,8 +16,8 @@ max_file_list_length=30      # in characters
 
 # git_module=on
 svn_module=on
-hg_module=off
-vim_module=off
+hg_module=on
+vim_module=on
 
 
 ###########################################################   DEFAULT OBJECTS
