Add deltaBaseCacheLimit = 1G to .gitconfig

--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -3,6 +3,7 @@
 [core]
 	autocrlf = false
 	excludesfile = "~/.gitexcludes"
+	deltaBaseCacheLimit = 1G
 [alias]
 ; Common shortcuts.
 	st = status --ignore-submodule=all
