Add history on the fly and git new

--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -45,6 +45,7 @@
 ; fail after ~100 files or so, depending on the actual string (total file names)
 ; length.
         blamefiles = "!foo() { for i in \"$@\"; do git blame --date=short -C $i | cut -d '(' -f 2 | cut -d ' ' -f 1; done | sort -f | uniq -ic | sort -nr; }; foo"
+	new = "!f() { git fetch && git checkout -b $@ origin/master; }; f"
 [push]
 	default = matching
 [mergetool "autodiff"]
