--- a/configs/.gitconfig
+++ b/configs/.gitconfig
@@ -6,7 +6,7 @@
 	deltaBaseCacheLimit = 1G
 [alias]
 ; Common shortcuts.
-	st = status --ignore-submodule=all
+	st = status --ignore-submodule=all -sb
 	ci = commit
 	br = branch
         graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' \"$@\" | sed 's/[0-9a-f][0-9a-f]*/\"&\"/g' ; echo '}'; }; f"
