tmux config, now with full of awesomeness

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -27,7 +27,7 @@
 # tmux doesn't support virtual space so the view will be the smallest one of the
 # currently connected clients. There is not equivalent to screen's 'fit'
 # command. As such, always forcibly disconnect other clients when connecting:
-#    if tmux has; then tmux attach -d; else tmux; fi
+#    "if tmux has; then tmux attach -d; else tmux; fi"
 
 # Key bindings
 # Ctrl-B -> Ctrl-A
@@ -38,20 +38,23 @@ bind-key -n F11 previous-window
 bind-key -n F12 next-window
 
 # Status bar
-set-option -g status-bg black
+set-option -g status-bg "#202020"
 set-option -g status-fg brightwhite
 set-option -g status-interval 1
 set-option -g status-left ""
-set-option -g status-right "%H:%M:%S"
-set-option -g status-right-fg brightred
-set-option -g window-status-current-bg brightblue
-set-option -g window-status-current-format "#I#20T "
-set-option -g window-status-format "#I#10T#F "
+set-option -g status-right "#[fg=red]#(cat /proc/loadavg | cut -d ' ' -f 1,4) #[fg=green]%H:%M:%S"
+set-option -g window-status-activity-attr none
+set-option -g window-status-content-style none
+set-option -g window-status-current-bg blue
+set-option -g window-status-current-format "#I#20T"
+set-option -g window-status-format "#I#10T#[fg=red]#F"
+set-option -g window-status-separator "  "
 
 # Alerts, mostly for IRC and know when slow processes (like running presubmit
 # checks) are done.
-# TODO(maruel): Determine what is useful.
-#set-option -g bell-on-alert on
+set-option -g display-time 100
 set-option -g monitor-activity on
-set-option -g visual-activity on
-#set-option -g visual-bell on
+set-option -g visual-bell on
+
+# Misc
+set-option -g history-limit 10000
