--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -42,8 +42,8 @@ set-option -g status-bg "#202020"
 set-option -g status-fg brightwhite
 set-option -g status-interval 1
 set-option -g status-left ""
-# See bin_pub/print_loadavg. It must be in PATH.
-set-option -g status-right "#[fg=red]#(print_loadavg) #[fg=green]%H:%M:%S"
+# See bin_pub/print_stats. It must be in PATH.
+set-option -g status-right "#[fg=red]#(print_stats) #[fg=green]%H:%M:%S"
 set-option -g window-status-activity-attr none
 set-option -g window-status-content-style none
 set-option -g window-status-current-bg blue
