Give in and rewrite in python

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -42,6 +42,7 @@ set-option -g status-bg "#202020"
 set-option -g status-fg brightwhite
 set-option -g status-interval 5
 set-option -g status-left ""
+set-option -g status-right-length 43
 # See bin_pub/print_stats. It must be in PATH.
 set-option -g status-right "#[fg=red]#(print_stats) #[fg=green]%H:%M:%S"
 set-option -g window-status-activity-attr none
