--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -34,6 +34,11 @@
 set-option -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
+# For my Pixel, which doesn't have F11/F12. F9/F10 can be accessed via
+# SearchKey+VolDown/VolUp.
+bind-key -n F9 previous-window
+bind-key -n F10 next-window
+# For my normal keyboard:
 bind-key -n F11 previous-window
 bind-key -n F12 next-window
 
