Yes, F12 exists on a Pixel.
https://twitter.com/marcaruel/status/455499156426354688

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -34,11 +34,8 @@
 set-option -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
-# For my Pixel, which doesn't have F11/F12. F9/F10 can be accessed via
-# SearchKey+VolDown/VolUp.
-bind-key -n F9 previous-window
-bind-key -n F10 next-window
-# For my normal keyboard:
+# If you can't find F11/F12 on a ChromeBook in hterm, try Search+'+' and
+# Search+=.
 bind-key -n F11 previous-window
 bind-key -n F12 next-window
 
