--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "keychain"]
 	path = keychain
 	url = git@github.com:maruel/keychain.py.git
+[submodule "configs/.vim/bundle/vim-go"]
+	path = configs/.vim/bundle/vim-go
+	url = https://github.com/fatih/vim-go.git
