--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -48,7 +48,7 @@ set-option -g status-right-length 43
 # See bin_pub/print_stats. It must be in PATH.
 set-option -g status-right "#[fg=#400000]#(print_stats) #[fg=green]%H:%M:%S"
 set-option -g window-status-activity-attr none
-set-option -g window-status-content-style none
+#set-option -g window-status-content-style none
 set-option -g window-status-current-bg blue
 set-option -g window-status-current-format "#I#20T"
 set-option -g window-status-format "#I#10T#[fg=red]#F"
