Improve .tmux.conf
Add v/y bindings to simplify copy paste; it becomes:
- Ctrl-a
- [
- v
- <cursor movement>
- y
- <move to a new vi window in :set paste mode>
- Ctrl-a
- ]

Increase history buffer to 100k lines.

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -29,11 +29,13 @@
 # command. As such, always forcibly disconnect other clients when connecting:
 #    "if tmux has; then tmux attach -d; else tmux; fi"
 
-# Key bindings
+# Key bindings; make it more like screen;
 # Ctrl-B -> Ctrl-A
 set-option -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
 # If you can't find F11/F12 on a ChromeBook in hterm, try Search+'+' and
 # Search+=.
 bind-key -n F11 previous-window
@@ -61,4 +63,4 @@ set-option -g monitor-activity on
 set-option -g visual-bell on
 
 # Misc
-set-option -g history-limit 10000
+set-option -g history-limit 100000
