--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -48,7 +48,7 @@ set-option -g status-interval 5
 set-option -g status-left ""
 set-option -g status-right-length 43
 # See bin_pub/print_stats. It must be in PATH.
-set-option -g status-right "#[fg=#400000]#(print_stats) #[fg=green]%H:%M:%S"
+set-option -g status-right "#[fg=#401010]#(print_stats)#[fg=blue]#{=3:host_short}#[fg=green]%H:%M"
 set-option -g window-status-activity-attr none
 #set-option -g window-status-content-style none
 set-option -g window-status-current-bg blue
