--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -42,6 +42,7 @@ bind-key -n F11 previous-window
 bind-key -n F12 next-window
 
 # Status bar
+set-option -g status-utf8 on
 set-option -g status-bg "#202020"
 set-option -g status-fg brightwhite
 set-option -g status-interval 5
@@ -52,8 +53,8 @@ set-option -g status-right "#[fg=#401010]#(print_stats)#[fg=blue]#{=3:host_short
 set-option -g window-status-activity-attr none
 #set-option -g window-status-content-style none
 set-option -g window-status-current-bg blue
-set-option -g window-status-current-format "#I#20T"
-set-option -g window-status-format "#I#10T#[fg=red]#F"
+set-option -g window-status-current-format "#[fg=#ffffff,bg=#000044]#{window_index}#{=20:pane_title}"
+set-option -g window-status-format "#{window_index}#{=10:pane_title}#[fg=red]#{window_flags}"
 set-option -g window-status-separator "  "
 
 # Alerts, mostly for IRC and know when slow processes (like running presubmit
