--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -10,20 +10,6 @@
 #   tmux list-keys
 #   tmux list-commands
 #
-# To build (Ubuntu 12.04 has an old tmux build that doesn't include reflow):
-#   sudo apt-get install automake libevent-dev libtool ncurses-dev
-#   git clone git://git.code.sf.net/p/tmux/tmux-code tmux
-#   cd tmux
-#   git fetch -t
-#   git tag
-#   git checkout 1.9a
-#   sh autogen.sh
-#   ./configure
-#   make
-#   sudo make install
-#   cd ..
-#   tmux -V
-#
 # tmux doesn't support virtual space so the view will be the smallest one of the
 # currently connected clients. There is not equivalent to screen's 'fit'
 # command. As such, always forcibly disconnect other clients when connecting:
@@ -34,8 +20,8 @@
 set-option -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
+bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
 # If you can't find F11/F12 on a ChromeBook in hterm, try Search+'+' and
 # Search+=.
 bind-key -n F11 previous-window
