tmux: add better Ctrl-A, C

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -22,6 +22,7 @@ unbind-key C-b
 bind-key C-a send-prefix
 bind-key -T copy-mode-vi 'v' send-keys -X begin-selection
 bind-key -T copy-mode-vi 'y' send-keys -X copy-selection
+bind c new-window -c "#{pane_current_path}"
 # If you can't find F11/F12 on a ChromeBook in hterm, try Search+'+' and
 # Search+=.
 bind-key -n F11 previous-window
