--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -51,5 +51,5 @@ set-option -g visual-bell on
 # Misc
 set-option -g history-limit 100000
 # macOS
-#set -g default-command /Users/maruel/bin/homebrew/bin/bash
-#set -g default-shell /Users/maruel/bin/homebrew/bin/bash
+#set-option -g default-command /Users/maruel/bin/homebrew/bin/bash
+#set-option -g default-shell /Users/maruel/bin/homebrew/bin/bash
