Make .tmux.conf 2.9 compatible

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -36,8 +36,8 @@ set-option -g status-left ""
 set-option -g status-right-length 43
 # See bin_pub/print_stats. It must be in PATH.
 set-option -g status-right "#[fg=#401010]#(print_stats)#[fg=blue]#{=3:host_short}#[fg=green]%H:%M"
-set-option -g window-status-activity-attr none
-set-option -g window-status-current-bg blue
+set-option -g window-status-activity-style none
+set-option -g window-status-current-style bg=blue
 set-option -g window-status-current-format "#[fg=#ffffff,bg=#000044]#{window_index}#{=20:pane_title}"
 set-option -g window-status-format "#{window_index}#{=10:pane_title}#[fg=red]#{window_flags}"
 set-option -g window-status-separator "  "
