Experimenting with tmux.conf

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -27,6 +27,9 @@ bind c new-window -c "#{pane_current_path}"
 # Search+=.
 bind-key -n F11 previous-window
 bind-key -n F12 next-window
+# Testing around remotedesktop.
+bind-key -n S-F11 previous-window
+bind-key -n S-F12 next-window
 
 # Status bar
 set-option -g status-bg "#202020"
@@ -44,8 +47,10 @@ set-option -g window-status-separator "  "
 
 # Alerts, mostly for IRC and know when slow processes (like running presubmit
 # checks) are done.
-set-option -g display-time 100
+set-option -g bell-action any
+set-option -g display-time 500
 set-option -g monitor-activity on
+set-option -g monitor-bell on
 set-option -g visual-bell on
 
 # Misc
