Improve tmux.conf and bash_aliases
Make tmux do conditional imports.
Add variables to bash_aliases so they are usable in tmux.

--- a/configs/.tmux.conf
+++ b/configs/.tmux.conf
@@ -14,6 +14,9 @@
 # currently connected clients. There is not equivalent to screen's 'fit'
 # command. As such, always forcibly disconnect other clients when connecting:
 #    "if tmux has; then tmux attach -d; else tmux; fi"
+#
+# tmux often does breaking changes. The only way to keep up is to look at
+# https://github.com/tmux/tmux/blob/master/CHANGES
 
 # Key bindings; make it more like screen;
 # Ctrl-B -> Ctrl-A
@@ -38,7 +41,7 @@ set-option -g status-interval 5
 set-option -g status-left ""
 set-option -g status-right-length 43
 # See bin_pub/print_stats. It must be in PATH.
-set-option -g status-right "#[fg=#401010]#(print_stats)#[fg=blue]#{=3:host_short}#[fg=green]%H:%M"
+set-option -g status-right "#[fg=#401010]#(print_stats)#[fg=blue]#{=-3:host_short}#[fg=green,bg=black]%H:%M"
 set-option -g window-status-activity-style none
 set-option -g window-status-current-style bg=blue
 set-option -g window-status-current-format "#[fg=#ffffff,bg=#000044]#{window_index}#{=20:pane_title}"
@@ -55,6 +58,7 @@ set-option -g visual-bell on
 
 # Misc
 set-option -g history-limit 100000
-# macOS
-#set-option -g default-command /Users/maruel/bin/homebrew/bin/bash
-#set-option -g default-shell /Users/maruel/bin/homebrew/bin/bash
+
+# Load either hostname specific or OS specific configurations.
+if "test -f ~/.config/tmux/${UNAME}.conf" "source ~/.config/tmux/${UNAME}.conf"
+if "test -f ~/.config/tmux/${HOSTNAME}.conf" "source ~/.config/tmux/${HOSTNAME}.conf"
